modules/gdscript/tests/scripts/analyzer/errors/plane_index_int.gd
func test():
	var p: Plane = Plane()
	print(p[0])
